--- a/education.tex
+++ b/education.tex
@@ -58,7 +58,8 @@ enrollment is at 147\footnote{Complete breakdown of ACMS graduation
 the Statistics track accounts for 4 students currently enrolled (none
 as double majors), and for 2 to 6 students graduated in each of the
 last 5 years. In the same time, enrollment in the Statistics major is
-at an all times high, with \mmp{fill} of which XX women.
+at an all times high, with 127 currently enrolled students (74 double
+majors, 53 single majors) of which 77 women.
 
 \subsection{Transforming the Statistics  ACMS track}
 We will transform the ACMS Statistics track into a virtually new
