prior work section

--- a/organization.tex
+++ b/organization.tex
@@ -34,38 +34,110 @@ Analyze
 \subsection{             Results from Prior NSF Support             }
 \label{sec:priorNSF}
 
-The Co-PI Ivezi\'{c} was recently PI on four projects supported by NSF that
-are indirectly related to the work proposed here (mostly through data mining
-aspects, public release practice for all data products, and through engaging large 
-numbers of students in research and publication process). 
+\meila, Connolly, Ivezi\'{c} , and van der Plas are all part of an active
+and ongoing collaboration between statisticians, astrophysicists, and
+computer scientists at the University of Washington and Carnegie
+Mellon University.  This collaboration, dating to 2001, has
+demonstrated sustained success and was cited by the President of the
+American Statistical Association (ASA) as an exemplary
+interdisciplinary research team \cite{straf03}. Highlights from this
+collaboration include advances in cross-disciplinary education
+(including the integration of research and teaching), establishing a
+joint ``Big-Data'' PhD program between Computer Science and
+Statistics, the creation of an NSF-sponsored IGERT program between
+Statistics, Computer Science and the domain sciences on the topic of
+``Big-Data'', and numerous advances in computational and statistical
+approaches to data intensive astrophysics.
 
-The projects ``Towards a Panoramic 7-D Map of the Milky Way'' (AST-070790) and 
-``Mapping the Milky Way: Data-miners, Modelers, Observers, Unite!'' (AST-1008784)
-quantified statistical behavior of a few tens of millions of Milky Way stars observed by 
-the Sloan Digital Sky Survey in multi-dimensional position--velocity--chemical composition 
-space. The results were published in over a dozen refereed papers, and the work engaged
-four graduate students (including two Ph.D. theses) and 11 undergraduate students.
-A team of three undergraduate students has developed an education and public outreach site.
-
-The key project aims for the NSF award AST-0507529 ``Interpretation of Modern Radio 
-Surveys: Test of the Unification Paradigm'' were unification of several modern radio 
-catalogs into a single public database containing several million sources and 
-morphological classification of the matched sources. This three-year long project has 
-produced six journal publications, two Ph.D. theses, and has engaged six undergraduate 
-students in data analysis and publications. 
-
-The project ``Statistical Description and Modeling of the Variability of Optical Continuum 
-Emission from Quasars'' (AST-0807500) used time-domain data for the exploration of quasar 
-physics. This three-year project has produced four journal publications, a Ph.D. thesis, and has 
-engaged four undergraduates in data analysis and publications. 
-
-The project ``Intransitive Game-Thoretic'' classifiers ( )  analyzed the preference and ranked data in the context of intransitivity. This three year project produced: \mmp{fill} papers, a jointly taught Statistics/EE graduate course, 2 summer reading groups at UW and one at MIT, involved 5 statistics students, 1 CS student, 1 Applied Math student and 1 undergraduate, a code package available at {www.stat.washington.edu/mmp/intransitive}.
-
-The grant ``Doctoral Student Forum and Student Travel at the 2011 SIAM Data Mining Conference'' ( ) supported the travel of 14 out of town students to participate in the Doctoral Forum (9 out of these being statistics students), and an additional 7 students in the conference. The Forum activities: panel discussion, poster session, and best poster award were a succes. (In particular, several students obtained internships, organized SDM workshops in 2013, and improved their papers as a result of the Forum). 
-
-\meila~ is a recipient of the grant ``Statistical Modeling the Functional Activity in the Primary Motor Cortex''  from the {\em NSF ERC for Sensorymotor and Neural Engineering}, is a two year ongoing project. It has involved so far 2 statistics graduate students and one undergraduate. 
+PI \meila\ is XXX. Her project ``Intransitive Game-Thoretic''
+classifiers ( ) analyzed the preference and ranked data in the context
+of intransitivity. This three year project produced: \mmp{fill}
+papers, a jointly taught Statistics/EE graduate course, 2 summer
+reading groups at UW and one at MIT, involved 5 statistics students, 1
+CS student, 1 Applied Math student and 1 undergraduate, a code package
+available at {www.stat.washington.edu/mmp/intransitive}. The grant
+``Doctoral Student Forum and Student Travel at the 2011 SIAM Data
+Mining Conference'' ( ) supported the travel of 14 out of town
+students to participate in the Doctoral Forum (9 out of these being
+statistics students), and an additional 7 students in the
+conference. The Forum activities: panel discussion, poster session,
+and best poster award were a succes. (In particular, several students
+obtained internships, organized SDM workshops in 2013, and improved
+their papers as a result of the Forum). \meila~ is a recipient of the
+grant ``Statistical Modeling the Functional Activity in the Primary
+Motor Cortex'' from the {\em NSF ERC for Sensorymotor and Neural
+  Engineering}, is a two year ongoing project. It has involved so far
+2 statistics graduate students and one undergraduate.
 
 
+Connolly is the Simulation Scientist for the LSST; responsible for the
+modeling and simulations of the scientific performance of the
+LSST. Connolly's most recent NSF award IIS-0844580 \$490,398 ``Putting
+Astronomy's Head in the Cloud'' (2009 -- 2012) led to the development
+of scalable image analysis tools that are built upon the Hadoop
+platform\citep{wiley2011}. His work focuses on statistical approaches
+to large astrophysical data sets including the development of n-tree
+searching algorithms that make the calculation of n-point correlation
+functions scale to size of current surveys \cite{Moore00}. This
+software was made publicly available and has been used to compute the
+2--point function on over 10$^6$ galaxies and the 3--point correlation
+function of 400,000 galaxies from the SDSS survey
+\cite{Scranton2002,Szapudi2002,Nichol2006,mcbride2011a,mcbride2011b}. This
+work has resulted the introduction of signal compression and analysis
+techniques to astronomy that are now regularly applied to the analysis
+of spectroscopic surveys. His papers have demonstrated the ability of
+computer algorithms to automatically classify astronomical objects
+\cite{vdp2009,daniel2011} as well as using simplified active learning
+methods to accelerate the exploration of complex parameter spaces
+\cite{daniel2012}.
+
+The Co-PI Ivezi\'{c} is project scientist for the LSST. He was
+recently PI on four projects supported by NSF that are indirectly
+related to the work proposed here (mostly through data mining aspects,
+public release practice for all data products, and through engaging
+large numbers of students in research and publication process).
+
+The projects ``Towards a Panoramic 7-D Map of the Milky Way''
+(AST-070790) and ``Mapping the Milky Way: Data-miners, Modelers,
+Observers, Unite!'' (AST-1008784) quantified statistical behavior of a
+few tens of millions of Milky Way stars observed by the Sloan Digital
+Sky Survey in multi-dimensional position--velocity--chemical
+composition space. The results were published in over a dozen refereed
+papers, and the work engaged four graduate students (including two
+Ph.D. theses) and 11 undergraduate students.  A team of three
+undergraduate students has developed an education and public outreach
+site.
+
+The key project aims for the NSF award AST-0507529 ``Interpretation of
+Modern Radio Surveys: Test of the Unification Paradigm'' were
+unification of several modern radio catalogs into a single public
+database containing several million sources and morphological
+classification of the matched sources. This three-year long project
+has produced six journal publications, two Ph.D. theses, and has
+engaged six undergraduate students in data analysis and publications.
+
+The project ``Statistical Description and Modeling of the Variability
+of Optical Continuum Emission from Quasars'' (AST-0807500) used
+time-domain data for the exploration of quasar physics. This
+three-year project has produced four journal publications, a
+Ph.D. thesis, and has engaged four undergraduates in data analysis and
+publications.
+
+
+
+Beyond the statistical and astrophysical aspects of the research
+described above the PIs have demonstrated a commitment for integrating
+research and education (see, for example, the extensive machine
+learning tools available at http://astroml.github.com and the XXX). In
+the field of informal education, Connolly was the technical lead for
+the development of Sky in Google Earth (Google Sky;
+http://earth.google.com) which enabled the seamless exploration of
+astronomical images of the sky, and recently developed an affordable
+digital planetarium system using Microsoft's World Wide Telescope
+software \cite{rosenfield2011}.
+
+All tools, codes and educational material developed through this
+program will be open-source and made available on the web. 
 
 \section{Cemetery}
 
