--- a/proposal.tex
+++ b/proposal.tex
@@ -4,6 +4,8 @@
 \usepackage{paralist}
 \usepackage{parskip}
 
+\setlength{\parindent}{3ex}
+
 \usepackage[compact,medium]{titlesec}
 \titlespacing{\part}{0pt}{*0}{2ex}
 \titlespacing{\section}{0pt}{2pt}{1ex}
