--- a/proposal.bib
+++ b/proposal.bib
@@ -1,3 +1,5 @@
+
+
 @MISC{Doe:2009:Misc,
 author = {Doe, George},
 title = {This is a test test entry of type {@MISC} and `howpublished'},
@@ -50,5 +52,20 @@ url = {http://www.test.org/doe/}
   publisher = 	 {Pearson},
   year = 	 {2013},
   OPTedition = 	 {3rd},
+}
+
+@Article{friedman:97,
+  author =       {Friedman, Jerome},
+  title =        {Data mining and statistics: What's the connection?},
+  journal =      {},
+  year =         {1997},
+}
+
+@Book{Witten:12,
+  author = 	 {Gareth James, Daniela Witten, Trevor Hastie, Robert Tibshirani},
+  title = 	 {An Introduction to Statistical Learning: with Applications in R},
+  publisher = 	 {Springer},
+  year = 	 {2013},
+  series = 	 {Springer Texts in Statistics},
 }
 
