--- a/proposal.tex
+++ b/proposal.tex
@@ -75,9 +75,9 @@
 \newcommand{\meila}{Meil\u{a}}
 \newcommand{\cdse}{CDS\&E}
 
-\newcommand{\astroml}{{\em AstroML}}
-\newcommand{\astrocl}{{\sc ASTR 497}}
-\newcommand{\statcl}{{\sc STAT 391}}
+\newcommand{\astroml}{{\tt AstroML}}
+\newcommand{\astrocl}{{\sc Astr 497}}
+\newcommand{\statcl}{{\sc Stat 391}}
 
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
