--- a/activities.tex
+++ b/activities.tex
@@ -7,21 +7,25 @@
 For the statistics graduate students funded by this grant, we envision 
 \bits
 \item to fund several students for a relatively short time (2 quarters
-  to 1 year). We adopt this ``rotation'' plan recognizing that developing 
-tools cannot be the only part of a PhD work in statistics. 
-This ``rotation'' model will also assure that the ``API'' of our data
-infrastructure is truly functional, as each departing graduate student 
-will have to ensure smooth transition to her/his successor.)
-\item Students will help develop the software and data infrastructure for
-  the program, search for available data sets, curate them, write
-  preprocessing software if necessary, and design tasks and exercises. 
-  At the same time, students will get training for analyzing large data sets. 
-\item Students will be advised by the PI, by another Statistics faculty, or by another UW scientist with interests in statistical analysis of big data. Gradually, a research problem will be formulated and the student will
-focus on the data and methodology relevant to the chosen problem. After this ``apprenticeship'', 
-some students will continue their research supervised by other advisors. 
-\item The students will also be strongly recommended to TA the STAT 391 class, thus rounding their preparation and providing self-confidence. 
-\item This program will enable statistics PhD students to play useful roles in other NSF funded initiatives at UW. For 
-%instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a %daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. T
+  to 1 year). We adopt this ``rotation'' plan in order to offer an ``apprenticeship'' period to as many graduate students as possible. 
+This ``rotation'' model will also assure that successive graduate students pass on the experiences accumulated, as each departing graduate student 
+will have to ensure a smooth transition into the projects to her/his successor.
+\item As part of their research projects, students will help develop
+  the software and data infrastructure for the program. E.g. they may
+  search for available data sets, curate them, write preprocessing
+  software if necessary, and design tasks and exercises. This exercise
+  is useful in itself beyond its useable products, as it will offer
+  various close to ``real-world'' experiences. For example, how to
+  estimate how much data will support a certain task or model, the
+  stages of designing an experiment, to formulate questions and to
+  tranlating them into data analysis tasks. To note that our purpose
+  here is not to replicate the many existing repositories like {\tt
+    UCI, Weka, Delve}, but to leverage (some of) them, by extracting
+  from them the most useful teachable tasks and data subsets.
+  
+\item Students will be advised by the PI, by another Statistics faculty, or by another UW scientist with interests in statistical analysis of big data. After  ``apprenticeship'' funded by this grant, some students will continue their research supervised by other advisors. 
+\item The students will also be strongly encouraged to TA the STAT 391 class, thus rounding their preparation and providing self-confidence. 
+\item This program will enable statistics PhD students to play useful roles in other NSF funded initiatives at UW. For %instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a %daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. T
 example, this plan harmonizes with the IGERT plan of offering graduate students the experience of working with domain scientists, and with outside big data companies via internships. 
 \item Finally, the graduate students will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
  \eits
@@ -46,7 +50,7 @@ Beginning of the development of course notes for \statcl.
  \eits
 
 \subsection{Undergraduate involvement}
-
+\label{sec:ugrad-seminar}
 The PI and all co-PI's have extensive track records of involving
 undergrads in research. Undergraduates who take either of the courses will be involved in
 research projects either (1) along with the funded graduate students,
@@ -55,7 +59,7 @@ UW units that provide data sets.
 
 All undergraduates involved in research under this project, along with
 the graduate students, will participate in an {\em Undergraduate
-\cdse\  Research Seminar} \comment{(UNDRESS)} where they will present and
+\cdse\  Research Seminar} where they will present and
 discuss their work.  
 The seminar will be open to any other undergraduate students involved
 in research with Statistics faculty who would like to participate, as
