--- a/activities.tex
+++ b/activities.tex
@@ -1,30 +1,5 @@
-\section{Activities}
+\section{PROGRAM ACTIVITIES}
 \label{sec:activities}
-
-\subsection{Graduate students involvement}
-\label{sec:activities-grad}
-
-For the statistics graduate students funded by this grant, we envision 
-\bits
-\item to fund several students for a relatively short time (2 quarters
-  to 1 year). We adopt this ``rotation'' plan recognizing that developing 
-tools cannot be the only part of a PhD work in statistics. 
-This ``rotation'' model will also assure that the ``API'' of our data
-infrastructure is truly functional, as each departing graduate student 
-will have to ensure smooth transition to her/his successor.)
-\item Students will help develop the software and data infrastructure for
-  the program, search for available data sets, curate them, write
-  preprocessing software if necessary, and design tasks and exercises. 
-  At the same time, students will get training for analyzing large data sets. 
-\item Students will be advised by the PI, by another Statistics faculty, or by another UW scientist with interests in statistical analysis of big data. Gradually, a research problem will be formulated and the student will
-focus on the data and methodology relevant to the chosen problem. After this ``apprenticeship'', 
-some students will continue their research supervised by other advisors. 
-\item The students will also be strongly recommended to TA the STAT 391 class, thus rounding their preparation and providing self-confidence. 
-\item This program will enable statistics PhD students to play useful roles in other NSF funded initiatives at UW. For 
-%instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a %daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. T
-example, this plan harmonizes with the IGERT plan of offering graduate students the experience of working with domain scientists, and with outside big data companies via internships. 
-\item Finally, the graduate students will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
- \eits
 
 \subsection{PI and Co-PIs Involvement}
 
@@ -76,4 +51,29 @@ students, the seminar will include:
 Some of the seminar's activities and goals overlap with the goals of {\em Statistics and Probability Association}\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and the Pre-MAP program\footnote{\tt http://www.astro.washington.edu/users/premap/}, 
 and we plan to do these jointly, reinforcing the  benefits for all groups involved.
 
+
+\subsection{Graduate students involvement}
+\label{sec:activities-grad}
+
+For the statistics graduate students funded by this grant, we envision 
+\bits
+\item to fund several students for a relatively short time (2 quarters
+  to 1 year). We adopt this ``rotation'' plan recognizing that developing 
+tools cannot be the only part of a PhD work in statistics. 
+This ``rotation'' model will also assure that the ``API'' of our data
+infrastructure is truly functional, as each departing graduate student 
+will have to ensure smooth transition to her/his successor.)
+\item Students will help develop the software and data infrastructure for
+  the program, search for available data sets, curate them, write
+  preprocessing software if necessary, and design tasks and exercises. 
+  At the same time, students will get training for analyzing large data sets. 
+\item Students will be advised by the PI, by another Statistics faculty, or by another UW scientist with interests in statistical analysis of big data. Gradually, a research problem will be formulated and the student will
+focus on the data and methodology relevant to the chosen problem. After this ``apprenticeship'', 
+some students will continue their research supervised by other advisors. 
+\item The students will also be strongly recommended to TA the STAT 391 class, thus rounding their preparation and providing self-confidence. 
+\item This program will enable statistics PhD students to play useful roles in other NSF funded initiatives at UW. For 
+%instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a %daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. T
+example, this plan harmonizes with the IGERT plan of offering graduate students the experience of working with domain scientists, and with outside big data companies via internships. 
+\item Finally, the graduate students will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
+ \eits
 
