--- a/introduction.tex
+++ b/introduction.tex
@@ -11,7 +11,7 @@ at the University of Washington. We have secured broad institutional support and
 (Statistics and Astronomy), and the proposed work includes a workshop centered on professional development activities
 for faculty from other institutions wishing to emulate the proposed program. 
 
-\vskip 0.2in Our main goals and deliverables are: 
+\vskip 0.1in Our main goals and deliverables are: 
 \bits
 \item {\bf Education and Training} (Section \ref{sec:education}).
 
@@ -19,20 +19,20 @@ Transform the ACMS (Applied and Computational Math Sciences) Program Statistics 
 \begin{itemize}
   \item two new courses
   \item new curriculum 
-  \item Undergraduate \cdse~ Research Seminar
+  \item undergraduate \cdse~ Research Seminar
   \end{itemize}
 \item {\bf Research and mentoring for research} (Section \ref{sec:research})
 \begin{itemize}
   \item facilitate entrance of Statistics students into computationally intensive data analysis research
-  \item mentor Astronomy graduate students 
-  \item mentoring undergraduates by PI's and graduate students
+  \item mentoring of undergraduate students by PI, Co-PIs, and graduate students
+  \item mentoring of Statistics and Astronomy graduate students by PI and Co-PIs
   \end{itemize}
 \item {\bf Dissemination and Outreach} (Section \ref{sec:outreach})
 
  \bits
   \item software and datasets infrastructure for teaching computational statistics and machine learning 
   \item workshop for UW faculty % in the use of the infrastructure and our experience with it
-  \item workshop with outside participation 
+  \item workshop with outside participation. 
  \eits
 \eits  
 
