--- a/research.tex
+++ b/research.tex
@@ -1,4 +1,4 @@
-\section{Research}
+\section{RESEARCH PROGRAM}
 \label{sec:research}
 
 The research plan under this grant will have as its primary goal to
