--- a/uw.tex
+++ b/uw.tex
@@ -1,11 +1,12 @@
-\subsection{The UW eScience program}
+\subsection{THE UW eScience PROGRAM}
 The educational program described in this proposal fits naturally with a number of initiatives to integrate the mathematical and physical sciences around the concepts of ``Big Data'', that are ongoing at the University of Washington. Prime amongst these endeavors are the creation of an eScience Institute, the development of a Data Science Environment program sponsored by the Moore and Sloan foundations, and a new NSF-sponsored IGERT graduate student program in ``Big Data''. We will leverage these programs throughout this initiative by enhancing the curriculum and research experiences of the mathematical and statistical students in data-intensive science, by providing the resources to enable hands-on research experiences, and by engaging the IGERT graduate students in working with the undergraduate students.
 
 \subsection{The UW eScience Institute}
 
 The eScience Institute was created in 2008 with a goal of “advancing data-driven techniques and technologies.” eScience has a core faculty and permanent research staff with long standing collaborations with Statistics, Applied Math, Computer Science, and the domain sciences. Activities sponsored through eScience include bootcamps, a long-running seminar series on eScience, a new PhD program, graduate and informal education curricula in the emerging area of data science, an established suite of UW-wide research cyberinfrastructure services for computing, data management and scalable analytics tools (for example, SQLShare), the creation of physical infrastructure for high-performance computing (Hyak) and scalable storage (lolo), and significant enhancements to campus and regional networks that facilitated access to cloud services.
 
-This year, the eScience Institute received an award from the Moore and Sloan foundations to create a Data Science Environment at the university. The physical space associated with this award will include classrooms and meeting areas for seminar series on data intensive research, and free cloud computing resources for data storage and analysis. The program itself will focus on career paths for researchers at the interface of science and data but will include the educational and career development of these researchers (though courses and curricula for data science). As part of our program we will utilize the eScience resources. {\bf WE NEED A LETTER FROM ED} Bootcamps and classes will provide students with introductory material for the computational components of our new courses. Seminar series will illustrate how the skills develop through statistics and machine learning might be applied to the broader science community (and the workforce in general). The cloud resources for analyzing data in the student projects will be made available to the ACML students through the Data Science Environment.
+This year, the eScience Institute received an award from the Moore and Sloan foundations to create a Data Science Environment at the university. The physical space associated with this award will include classrooms and meeting areas for seminar series on data intensive research, and free cloud computing resources for data storage and analysis. The program itself will focus on career paths for researchers at the interface of science and data but will include the educational and career development of these researchers (though courses and curricula for data science). As part of our program we will utilize the eScience resources.
+ Bootcamps and classes will provide students with introductory material for the computational components of our new courses. Seminar series will illustrate how the skills develop through statistics and machine learning might be applied to the broader science community (and the workforce in general). The cloud resources for analyzing data in the student projects will be made available to the ACML students through the Data Science Environment.
 
 The Data Science Environment expects to hire promising undergraduate students from the mathematical and statistical field to work within the physical space on research software projects under the mentorship of the core staff and eScience leadership.  Research opportunities for undergraduates have a profound impact on their education and careers; the limiting factor is typically the management overhead.  By providing a physical location, a critical mass of mentors, a queue of shovel-ready projects, and a structured management environment, we will significantly increase the number of students we can mentor at one time.
 
