--- a/recruitment.tex
+++ b/recruitment.tex
@@ -1,4 +1,4 @@
- \section{Recruitment, Mentoring, and Retention}
+ \section{RECRUITMENT, MENTORING, AND RETENTION}
 
  The University of Washington has long played a leadership role in
  recruiting, and mentoring students including those from traditionally
@@ -30,7 +30,7 @@ faculty at local, state, and regional community and state colleges for
 the purpose of identifying potential students (e.g.\ $\sim$30\% of UW
 students come from two-year community colleges). Additionally, to
 establish in-person recruitment connections, on a regular basis, the
-IGERT graduate students will present at these institutes as a
+IGERT graduate students will present at these institutions as a
 recruitment opportunity.
 
 
