--- a/uw.tex
+++ b/uw.tex
@@ -1,4 +1,4 @@
-\subsection{THE UW eScience PROGRAM}
+\subsection{The UW eScience Program}
 The educational program described in this proposal fits naturally with a number of initiatives to integrate the mathematical and physical sciences around the concepts of ``Big Data'', that are ongoing at the University of Washington. Prime amongst these endeavors are the creation of an eScience Institute, the development of a Data Science Environment program sponsored by the Moore and Sloan foundations, and a new NSF-sponsored IGERT graduate student program in ``Big Data''. We will leverage these programs throughout this initiative by enhancing the curriculum and research experiences of the mathematical and statistical students in data-intensive science, by providing the resources to enable hands-on research experiences, and by engaging the IGERT graduate students in working with the undergraduate students.
 
 \subsection{The UW eScience Institute}
@@ -17,5 +17,4 @@ Most disciplines, from physical to life sciences, have entered an era, where dis
 The recognition of this gap between the needs and capabilities of the current generation of graduate students has led to the development of an IGERT funded program in ``Big Data''.
 The transformative path to address these challenges comprises: developing a new PhD program, with a novel curriculum and practical training, leveraging committed partnerships with 11 of the very best companies and national labs in the field; enabling the development of computational tools and statistical and machine learning models for managing, analyzing and visualizing Big Data.  The goal of the IGERT is to create a new breed of scientists: domain scientists proficient in and able to develop tools for Big Data Science, and statisticians and computer scientists versed in the needs and challenges of Big Data Science, and able to develop tools and models to tackle some of the biggest scientific questions of the coming decades.  Most importantly, this IGERT will have an immutable focus on multidisciplinary training, thus blurring the distinctions between domain scientists, computer scientists, and statisticians.
 
-The IGERT program naturally maps to our proposed undergraduate big data tract. We expect that the graduate students will undertake some of the supervision of the projects described in Section XX and the mentoring of the mathematical and statistical students. Each of these elements will be integrated in our proposed curricula. One of the key goals is developing a diverse STEM workforce, including strategies for recruiting and retaining traditionally under-represented groups, women and students with disabilities.  We will, therefore, leverage the graduate student program to...
-
+The IGERT program naturally maps to our proposed undergraduate Big Data tract. We expect that the graduate students will undertake some of the supervision of the projects described in Section~\ref{sec:research}, and the mentoring of the mathematical and statistical students. Each of these elements will be integrated in our proposed curricula. One of the key goals is developing a diverse STEM workforce, including strategies for recruiting and retaining traditionally under-represented groups, women and students with disabilities. 
