--- a/activities.tex
+++ b/activities.tex
@@ -21,7 +21,8 @@ Beginning of the development of course notes for \statcl.
  \eits
 
 \subsection{Undergraduate involvement}
-\label{sec:ugrad-seminar}
+\label{sec:ugradseminar}
+
 The PI and all co-PI's have extensive track records of involving
 undergrads in research. Undergraduates who take either of the courses will be involved in
 research projects either (1) along with the funded graduate students,
