--- a/education.tex
+++ b/education.tex
@@ -428,12 +428,16 @@ experience with data, through programs one understands, the
 combination of algorithmics and statistics that comes into play for
 large, high-dimensional data sets \mmp{clean this up}}
 
-%ZI, AC, JVdP
+Connolly teaches a graduate class ASTR 597 ``Statistics and Machine Learning'' at the 
+Department of Astronomy. Ivezi\'{c} teaches a graduate class ASTR 507 ``Aastrophysics I'',
+which includes introduction to statistical data analysis and Bayesian statistics. 
+VanderPlas teaches a graduate seminar course Astr 599 ``Scientific Computing with Python''. 
+Materials and experienced developed in these courses will be leveraged in the development
+of this program (see Sections \ref{sec:Python} and \ref{sec:Jake}). 
 
-
-\meila\ and Connoly co-taught an extremely well received course at CMU
+\meila\ and Connolly co-taught an extremely well received course at CMU
 in 1999-2000, ``Computational Statistics of Multi-Dimensional
-Scientific Databases'', which reunited students from Statistics,
+Scientific Databases'', which united students from Statistics,
 Computer Science and Astronomy, as well as faculty from these
 departments.
 
@@ -442,12 +446,12 @@ be used by \statcl~ students in their quiz sessions and assignments.
 %The clusters {\tt newton1,2}, consisting of 8, respectively 2 high memory nodes, 
 The high-memory computer clusters, 
 accquired from a UW Student Technology Grant, will serve as
-basis for the graduate student research. 
+basis for the graduate student research. The Pre-MAP program (see Section \ref{sec:MNRetaining})
+run by the Department of Astronomy will be used for recruitment. 
 % \mmp{shall i buy more nodes??}
 
-The \astroml~ book and web site (see Section \ref{sec:Python}) will provide the starting 
-point for the new courses' software and data infrastructure.
-
+The \astroml~ textbook and the supporting public web site will provide the starting 
+point for the new courses' software and data infrastructure (see Section \ref{sec:Python}).
 
 \comment{
 (Recently, starting 2011, CSE created their own introduction to
