--- a/proposal.tex
+++ b/proposal.tex
@@ -45,8 +45,7 @@
 \usepackage{hyperref}
 
 
-\title{Statistical Explorations of Data in the {ACMS} {Program} at the
-  {University} of {Washington}}
+\title{Statistical Explorations of Data in the {ACMS} {Program} at the {University} of {Washington}}
 \author{PI: Marina \meila, Co-PIs: Andrew Connolly, \v{Z}eljko Ivezi\'{c}, Jacob Vanderplas}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -95,8 +94,8 @@
 
 \begin{document}
 
-
-\maketitle
+% we don't need title - it's done automatically by Fastlane
+%\maketitle
 
 \input{introduction}  % the same
    
