--- a/recruitment.tex
+++ b/recruitment.tex
@@ -67,6 +67,7 @@ share among all participants of the EXTREEMS-QED program (faculty and
 students). 
 
 \subsection{Mentoring, Networking, and Retaining Students}
+\label{sec:MNRetaining}
 
 Mentoring and community building will begin immediately upon
 acceptance to the program. We will build upon the success of the
